// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Proposal.responses array fetches a proposal's private responses when admin.: UHJvcG9zYWw6cHJvcG9zYWwy 1`] = `
Object {
  "proposal": Object {
    "author": Object {
      "id": "VXNlcjp1c2VyNQ==",
    },
    "evaluers": Array [
      Object {
        "users": Object {
          "edges": Array [
            Object {
              "node": Object {
                "id": "VXNlcjp1c2VyMQ==",
              },
            },
            Object {
              "node": Object {
                "id": "VXNlcjp1c2VyMg==",
              },
            },
            Object {
              "node": Object {
                "id": "VXNlcjp1c2VyNQ==",
              },
            },
            Object {
              "node": Object {
                "id": "VXNlcjp1c2VyU3B5bA==",
              },
            },
            Object {
              "node": Object {
                "id": "VXNlcjp1c2VyV2VsY29tYXR0aWM=",
              },
            },
          ],
        },
      },
      Object {
        "users": Object {
          "edges": Array [
            Object {
              "node": Object {
                "id": "VXNlcjp1c2VyS2lyb3VsZQ==",
              },
            },
          ],
        },
      },
    ],
    "responses": Array [
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MzAz",
          "private": false,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MQ==",
          "private": true,
        },
        "value": "souhaitable",
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246Mw==",
          "private": false,
        },
        "value": "1 million !",
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTE=",
          "private": false,
        },
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTI=",
          "private": false,
        },
      },
    ],
  },
  "viewer": Object {
    "id": "VXNlcjp1c2VyQWRtaW4=",
    "isAdmin": true,
  },
}
`;

exports[`Proposal.responses array fetches a proposal's private responses when author.: UHJvcG9zYWw6cHJvcG9zYWwy 1`] = `
Object {
  "proposal": Object {
    "author": Object {
      "id": "VXNlcjp1c2VyNQ==",
    },
    "evaluers": Array [
      Object {
        "users": Object {
          "edges": Array [
            Object {
              "node": Object {
                "id": "VXNlcjp1c2VyMQ==",
              },
            },
            Object {
              "node": Object {
                "id": "VXNlcjp1c2VyMg==",
              },
            },
            Object {
              "node": Object {
                "id": "VXNlcjp1c2VyNQ==",
              },
            },
            Object {
              "node": Object {
                "id": "VXNlcjp1c2VyU3B5bA==",
              },
            },
            Object {
              "node": Object {
                "id": "VXNlcjp1c2VyV2VsY29tYXR0aWM=",
              },
            },
          ],
        },
      },
      Object {
        "users": Object {
          "edges": Array [
            Object {
              "node": Object {
                "id": "VXNlcjp1c2VyS2lyb3VsZQ==",
              },
            },
          ],
        },
      },
    ],
    "responses": Array [
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MzAz",
          "private": false,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MQ==",
          "private": true,
        },
        "value": "souhaitable",
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246Mw==",
          "private": false,
        },
        "value": "1 million !",
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTE=",
          "private": false,
        },
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTI=",
          "private": false,
        },
      },
    ],
  },
  "viewer": Object {
    "id": "VXNlcjp1c2VyNQ==",
    "isAdmin": false,
  },
}
`;

exports[`Proposal.responses array fetches a proposal's private responses when evaluer on this proposal.: UHJvcG9zYWw6cHJvcG9zYWwy 1`] = `
Object {
  "proposal": Object {
    "author": Object {
      "id": "VXNlcjp1c2VyNQ==",
    },
    "evaluers": Array [
      Object {
        "users": Object {
          "edges": Array [
            Object {
              "node": Object {
                "id": "VXNlcjp1c2VyMQ==",
              },
            },
            Object {
              "node": Object {
                "id": "VXNlcjp1c2VyMg==",
              },
            },
            Object {
              "node": Object {
                "id": "VXNlcjp1c2VyNQ==",
              },
            },
            Object {
              "node": Object {
                "id": "VXNlcjp1c2VyU3B5bA==",
              },
            },
            Object {
              "node": Object {
                "id": "VXNlcjp1c2VyV2VsY29tYXR0aWM=",
              },
            },
          ],
        },
      },
      Object {
        "users": Object {
          "edges": Array [
            Object {
              "node": Object {
                "id": "VXNlcjp1c2VyS2lyb3VsZQ==",
              },
            },
          ],
        },
      },
    ],
    "responses": Array [
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MzAz",
          "private": false,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MQ==",
          "private": true,
        },
        "value": "souhaitable",
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246Mw==",
          "private": false,
        },
        "value": "1 million !",
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTE=",
          "private": false,
        },
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTI=",
          "private": false,
        },
      },
    ],
  },
  "viewer": Object {
    "id": "VXNlcjp1c2VyS2lyb3VsZQ==",
    "isAdmin": false,
  },
}
`;

exports[`Proposal.responses array fetches only a proposal's public responses when not authenticated.: UHJvcG9zYWw6cHJvcG9zYWwy 1`] = `
Object {
  "proposal": Object {
    "author": Object {
      "id": "VXNlcjp1c2VyNQ==",
    },
    "evaluers": Array [
      Object {
        "users": Object {
          "edges": Array [
            Object {
              "node": Object {
                "id": "VXNlcjp1c2VyMQ==",
              },
            },
            Object {
              "node": Object {
                "id": "VXNlcjp1c2VyMg==",
              },
            },
            Object {
              "node": Object {
                "id": "VXNlcjp1c2VyNQ==",
              },
            },
            Object {
              "node": Object {
                "id": "VXNlcjp1c2VyU3B5bA==",
              },
            },
            Object {
              "node": Object {
                "id": "VXNlcjp1c2VyV2VsY29tYXR0aWM=",
              },
            },
          ],
        },
      },
      Object {
        "users": Object {
          "edges": Array [
            Object {
              "node": Object {
                "id": "VXNlcjp1c2VyS2lyb3VsZQ==",
              },
            },
          ],
        },
      },
    ],
    "responses": Array [
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MzAz",
          "private": false,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246Mw==",
          "private": false,
        },
        "value": "1 million !",
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTE=",
          "private": false,
        },
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTI=",
          "private": false,
        },
      },
    ],
  },
}
`;

exports[`Proposal.responses array fetches only a proposal's public responses when user is evaluer but not on this proposal.: UHJvcG9zYWw6cHJvcG9zYWwy 1`] = `
Object {
  "proposal": Object {
    "author": Object {
      "id": "VXNlcjp1c2VyNQ==",
    },
    "evaluers": Array [
      Object {
        "users": Object {
          "edges": Array [
            Object {
              "node": Object {
                "id": "VXNlcjp1c2VyMQ==",
              },
            },
            Object {
              "node": Object {
                "id": "VXNlcjp1c2VyMg==",
              },
            },
            Object {
              "node": Object {
                "id": "VXNlcjp1c2VyNQ==",
              },
            },
            Object {
              "node": Object {
                "id": "VXNlcjp1c2VyU3B5bA==",
              },
            },
            Object {
              "node": Object {
                "id": "VXNlcjp1c2VyV2VsY29tYXR0aWM=",
              },
            },
          ],
        },
      },
      Object {
        "users": Object {
          "edges": Array [
            Object {
              "node": Object {
                "id": "VXNlcjp1c2VyS2lyb3VsZQ==",
              },
            },
          ],
        },
      },
    ],
    "responses": Array [
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MzAz",
          "private": false,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246Mw==",
          "private": false,
        },
        "value": "1 million !",
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTE=",
          "private": false,
        },
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTI=",
          "private": false,
        },
      },
    ],
  },
  "viewer": Object {
    "id": "VXNlcjp1c2VyNTA0",
    "isAdmin": false,
  },
}
`;

exports[`Proposal.responses array fetches proposal's private responses when user is analyst on this proposal.: UHJvcG9zYWw6cHJvcG9zYWxJZGYx 1`] = `
Object {
  "proposal": Object {
    "analysts": Array [
      Object {
        "id": "VXNlcjp1c2VyQWd1aQ==",
      },
      Object {
        "id": "VXNlcjp1c2VySnBlYw==",
      },
      Object {
        "id": "VXNlcjp1c2VyTWF4aW1l",
      },
      Object {
        "id": "VXNlcjp1c2VyT21hcg==",
      },
      Object {
        "id": "VXNlcjp1c2VyVGhlbw==",
      },
      Object {
        "id": "VXNlcjp1c2VyVmluY2VudA==",
      },
    ],
    "author": Object {
      "id": "VXNlcjp1c2VyS2lyb3VsZQ==",
    },
    "responses": Array [
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTMyOQ==",
          "private": true,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MzkxOA==",
          "private": true,
        },
        "value": "\\"Renseigner la présentation de mon Grand Projet\\"",
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MzA0",
          "private": false,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTMzMg==",
          "private": true,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTMzMw==",
          "private": true,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTMzNA==",
          "private": false,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTMzNQ==",
          "private": true,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MzA1",
          "private": false,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTMzMA==",
          "private": true,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MzkxOQ==",
          "private": true,
        },
        "value": "\\"Un autre organisme privé\\"",
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTMzMQ==",
          "private": false,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MzA3",
          "private": false,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTM2Mg==",
          "private": false,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTM2Mw==",
          "private": true,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTM2NA==",
          "private": true,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTM2NQ==",
          "private": false,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTM2Ng==",
          "private": false,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTIx",
          "private": true,
        },
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTM2Nw==",
          "private": true,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MzA2",
          "private": false,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MzkyMA==",
          "private": true,
        },
        "value": "{\\"labels\\":[],\\"other\\":null}",
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MzkyMQ==",
          "private": true,
        },
        "value": "{\\"labels\\":[],\\"other\\":null}",
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTMzNg==",
          "private": true,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTMzNw==",
          "private": true,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTMzOA==",
          "private": true,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTMzOQ==",
          "private": true,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTM0MA==",
          "private": true,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTIy",
          "private": true,
        },
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTIz",
          "private": true,
        },
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTI1",
          "private": true,
        },
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTI2",
          "private": true,
        },
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTI3",
          "private": true,
        },
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MzkyMg==",
          "private": true,
        },
        "value": "{\\"labels\\":[],\\"other\\":null}",
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTM0Mg==",
          "private": true,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTM0Mw==",
          "private": true,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTM0NA==",
          "private": true,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTM0NQ==",
          "private": true,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTM0Ng==",
          "private": true,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTI4",
          "private": true,
        },
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTI5",
          "private": true,
        },
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTMw",
          "private": true,
        },
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTMx",
          "private": true,
        },
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTMy",
          "private": true,
        },
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTM0Nw==",
          "private": true,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTM0OA==",
          "private": true,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTM0OQ==",
          "private": true,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTM1MA==",
          "private": true,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTMz",
          "private": true,
        },
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTM1",
          "private": true,
        },
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTM1MQ==",
          "private": true,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTM1Mg==",
          "private": true,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTM1Mw==",
          "private": true,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTM1NA==",
          "private": true,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTM1NQ==",
          "private": true,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTM2",
          "private": true,
        },
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTM3",
          "private": true,
        },
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTM4",
          "private": true,
        },
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTM1Ng==",
          "private": true,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTM5",
          "private": true,
        },
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTQw",
          "private": true,
        },
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTQx",
          "private": true,
        },
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTM1Nw==",
          "private": true,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTM1OA==",
          "private": true,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTM1OQ==",
          "private": true,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTM2MA==",
          "private": true,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTM2MQ==",
          "private": true,
        },
        "value": null,
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTQy",
          "private": true,
        },
      },
      Object {
        "question": Object {
          "id": "UXVlc3Rpb246MTQz",
          "private": true,
        },
      },
    ],
  },
  "viewer": Object {
    "id": "VXNlcjp1c2VyVGhlbw==",
    "isAdmin": false,
  },
}
`;
